# shiny-bassoon

./: README.md
DupeFinder/: comp_thumbs  comp_thumbs.cpp  comp_thumbs.cpp~  make_ct.sh  make_ct.sh~
IM7_QD8/: fix_pkgbuild.sh  im7_build.sh
MT_COMP/: comp_thumbs.cpp  load_db.cpp  make.sh  make1.sh  make_ct.sh  process_db.cpp
QVDBMT/: #DbConnector.cpp#  #QVBMetadata.h#  #QVBrowser.cpp#  ConfigDialog.cpp  ConfigDialog.h  DbConnector.cpp  DbConnector.h  FaceClassifier.py  FaceDialog.h  FaceIdentifier.py  FaceTools.cpp  FaceTools.h  FaceTrainer.py  FilterDialog.cpp  FilterDialog.h  MDIEDialog.h  Makefile  MetadataDialog.cpp  MetadataDialog.h  Miniplayer.h  NameDialog.h  QVBConfig.h  QVBConfig.h~  QVBMetadata.h  QVBrowser.cpp  QVBrowser.h  QVDec.cpp  QVDec.h  QVideoIcon.cpp  QVideoIcon.h  VidFile.cpp  VidFile.h  VideoUtils.cpp  VideoUtils.h  backup.txt  blah.exp  build_rel.sh  cleanRun.sh  clean_facerun.sh  config.cfg  (+10 more)
QVDBMT-mdlist/: DbConnector.cpp  DbConnector.h  FilterDialog.h  MDIEDialog.h  MetadataDialog.h  QVBConfig.h  QVBMetadata.h  QVBrowser.cpp  QVDec.cpp  QVDec.h  VidFile.h  VideoUtils.cpp  VideoUtils.h  cleanRun.sh  meson.build  run.sh  todo.txt
QVDBMT-stable/: .gitignore  .gitignore~  FilterDialog.h  MetadataDialog.h  NameDialog.h  QVBMetadata.h  QVBrowser.cpp  QVDec.h  VidFile.h  VideoUtils.cpp  VideoUtils.h  cleanDebRun.sh  debrun.sh  mdImporter.cc  meson.build  run.sh
VDBMT/: #VBrowser.cpp#  #VideoIcon.h#  DbConnector.cpp  DbConnector.h  Makefile  ProgressWin.h  VBrowser.cpp  VBrowser.h  VidFile.cpp  VidFile.h  VideoIcon.cpp  VideoIcon.h  VideoUtils.cpp  VideoUtils.h  config.cfg  info.sh  main.cc  make_ct.sh  test.sh  todo.txt
VDBcpp/: DbConnector.cpp  DbConnector.h  Makefile  VBrowser.cpp  VBrowser.h  VidFile.h  VideoIcon.cpp  VideoIcon.h  main.cc  make.sh  make_ct.sh  vbrowser
cppVDB/: Browser.cpp  Browser.cpp~  Browser.h  Browser.h~  main.cpp  main.cpp~  meson.build  meson.build~
custom_kbuild/: custom_kernel.sh  fix_config.sh  fix_pkgbuild.sh  prefix_config.sh
pyVDB/: db_con.py  db_con.py~  pyBrowser.py  pyBrowser.py~  rerun_test.sh  run_test.sh
pyVDB_c/: comp_thumbs  comp_thumbs.cpp  make_ct.sh  pyBrowser.py  trace1.txt  vid_file.py
(+32 files in other folders)
